<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/lay_padding" android:orientation="horizontal" android:id="@+id/odm_top"
            android:layout_alignParentTop="true">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/frg_odm_title"/>
    </LinearLayout>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:scrollbarAlwaysDrawVerticalTrack="true"
            android:id="@+id/odm_client" android:layout_below="@id/odm_top">

        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/lay_padding">

            <TableRow android:layout_width="match_parent"
                      android:layout_height="match_parent"
            >
                <TextView
                        android:text="@string/frg_odm_dist0_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvOdmDist0"/>
                <Button
                        android:text="@string/icon_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/btnOdmStartStop0"
                        style="@style/ButtonSmall"
                        android:layout_marginRight="@dimen/lay_padding" android:layout_marginLeft="@dimen/lay_padding"/>
                <Button
                        android:text="@string/icon_reset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/btnOdmReset0"
                        style="@style/ButtonSmall"/>
            </TableRow>
            <TableRow android:layout_width="match_parent"
                      android:layout_height="match_parent" android:paddingTop="@dimen/lay_padding"
            >
                <TextView
                        android:text="@string/frg_odm_dist1_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvOdmDist1"/>
                <Button
                        android:text="@string/icon_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/btnOdmStartStop1"
                        style="@style/ButtonSmall"
                        android:layout_marginRight="@dimen/lay_padding" android:layout_marginLeft="@dimen/lay_padding"/>
                <Button
                        android:text="@string/icon_reset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/btnOdmReset1"
                        style="@style/ButtonSmall"/>
            </TableRow>
            <TableRow android:layout_width="match_parent"
                      android:layout_height="match_parent" android:paddingTop="@dimen/lay_padding">
                <TextView
                        android:text="@string/frg_odm_dist2_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvOdmDist2"/>
                <Button
                        android:text="@string/icon_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/btnOdmStartStop2"
                        style="@style/ButtonSmall"
                        android:layout_marginRight="@dimen/lay_padding" android:layout_marginLeft="@dimen/lay_padding"/>
                <Button
                        android:text="@string/icon_reset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/btnOdmReset2"
                        style="@style/ButtonSmall"/>
            </TableRow>
        </TableLayout>
    </ScrollView>
</RelativeLayout>